# napari-spotiflow

./: .gitignore  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test_and_deploy.yml
docs/: index.md
napari_spotiflow/: __init__.py  _dock_widget.py  _io_hooks.py  _predict_widget.py  _sample_data.py  _train_widget.py  napari.yaml  utils.py
tests/: example.py  test_reader.py  test_widget.py
tests/data/: test1.csv  test2.csv
