[metadata]
name = napari-spotiflow
author = Albert Dominguez Mantes, Martin Weigert
author_email = albert.dominguezmantes@epfl.ch, martin.weigert@epfl.ch
dynamic = ["version"]
url = https://github.com/weigertlab/napari-spotiflow
license = BSD 3-Clause License
description = Napari plugin for Spotiflow
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

project_urls =
    Bug Tracker = https://github.com/weigertlab/napari-spotiflow/issues
    Documentation = https://github.com/weigertlab/napari-spotiflow#README.md
    Source Code = https://github.com/weigertlab/napari-spotiflow
    User Support = https://github.com/weigertlab/napari-spotiflow/issues

[options]
packages = find:
python_requires = >=3.9, <3.12

install_requires =
    spotiflow
    npe2
    napari

[options.package_data]
napari-spotiflow = 
    napari.yaml
    resources/*

[options.entry_points] 
napari.manifest = 
    napari-spotiflow = napari_spotiflow:napari.yaml
